--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "@auto-it/released": "^9.31.1",
     "all-contributors-cli": "^6.14.2",
     "auto": "^9.31.1"
+  },
+  "dependencies": {
+    "command-line-args": "^5.1.1",
+    "commander": "^5.1.0",
+    "prettier": "^2.0.5",
+    "yaml": "^1.9.2"
   }
 }
