--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tag": "auto shipit",
-    "release": "auto release"
+    "release": "auto shipit"
   },
   "repository": {
     "type": "git",
