--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "command-line-args": "^5.1.1",
     "commander": "^5.1.0",
     "prettier": "^2.0.5",
+    "sass": "^1.26.5",
     "yaml": "^1.9.2"
   }
 }
