--- a/.autorc
+++ b/.autorc
@@ -8,7 +8,7 @@
     [
       "exec",
       {
-        "afterRelease": "npm version from-git"
+        "afterRelease": "npm version from-git && npm publish"
       }
     ]
   ],
