fix: change baseline and discrete percentages

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -75,10 +75,10 @@ preons:
       n9: -9rem
       n10: -10rem
 
-    # For fonts especially
+    # For font line-heights
     baselined:
-      -xsmall: 1.6rem
-      -small: 2rem
+      -2: $baseline * 0.5
+      -1: $baseline * 1
       0: $baseline * 1.5
       1: $baseline * 2
       2: $baseline * 2.5
@@ -129,8 +129,17 @@ preons:
       -third: "(100% / 3)"
       -two-thirds: "(100% / 3 * 2)"
       -1-12: "(100% / 12)"
-      -2-12: "(100% / 12)"
-      -3-12: "(100% / 12)"
+      -2-12: "(100% / 12 * 2)"
+      -3-12: "(100% / 12 * 3)"
+      -4-12: "(100% / 12 * 4)"
+      -5-12: "(100% / 12 * 5)"
+      -6-12: "(100% / 12 * 6)"
+      -7-12: "(100% / 12 * 7)"
+      -8-12: "(100% / 12 * 8)"
+      -9-12: "(100% / 12 * 9)"
+      -10-12: "(100% / 12 * 10)"
+      -11-12: "(100% / 12 * 11)"
+      -12-12: "(100% / 12 * 12)"
 
     special-sizes:
       x: none
