fix: prefix visiblity

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -592,7 +592,7 @@ preons:
         t: top
 
     visibility:
-      class:
+      class: v-
       values:
         hidden: hidden
         visible: visible
