--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -14,7 +14,7 @@ preons:
       white: "#f4f2f9"
       greyl: "#beb9cc"
       grey: "#7d778e"
-      greyd: "#312948"
+      greyd: "#47454c"
       transparent: "transparent"
       hotpink: "#ea2889"
 
