--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -12,7 +12,7 @@ preons:
     theme-colors:
       black: "#242027"
       white: "#fefeff"
-      greyll: "#fcfbff"
+      greyll: "#f6f5f9"
       greyl: "#beb9cc"
       grey: "#7d778e"
       greyd: "#47454c"
