--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -12,11 +12,14 @@ preons:
     theme-colors:
       black: "#242027"
       white: "#fefeff"
-      greyll: "#f6f5f9"
+      greyll: "#d8cdd2"
       greyl: "#beb9cc"
       grey: "#7d778e"
       greyd: "#47454c"
+      bluel: "#e6dff7"
       transparent: "transparent"
+      hotpinkll: "#e8dee4"
+      hotpinkl: "#e8dee4"
       hotpink: "#ea2889"
 
     border-style:
@@ -167,6 +170,12 @@ preons:
       -xsuper: 68rem
       -xxsuper: 80rem
       -xxxsuper: 100rem
+
+    vh:
+      -100vh: 100vh
+
+    vw:
+      -100vw: 100vw
 
     negative-discrete:
       -nbig: -16rem
@@ -407,6 +416,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vh
 
     max-height:
       class: maxh
@@ -414,6 +424,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vh
 
     min-height:
       class: minh
@@ -421,6 +432,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vh
 
     width:
       class: w
@@ -429,6 +441,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vw
 
     max-width:
       class: maxw
@@ -436,6 +449,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vw
 
     min-width:
       class: minw
@@ -444,6 +458,7 @@ preons:
         - percentaged
         - discrete
         - special-sizes
+        - vw
 
     bottom:
       class: b
