fix: grey color alteration

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -13,7 +13,7 @@ preons:
       black: "#242027"
       white: "#fefeff"
       greyll: "#f9f8fb"
-      greyl: "#e2deea"
+      greyl: "#se2deea"
       grey: "#7d778e"
       greyd: "#47454c"
       bluel: "#e6dff7"
