docs: update @gemmadlou as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,8 @@
       "profile": "http://getrentr.com",
       "contributions": [
         "doc",
-        "code"
+        "code",
+        "test"
       ]
     },
     {
