Add more colors - lime, orange, purple, red, yellow

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -4,18 +4,47 @@ preons:
   rules:
     theme-colors:
       black: "#302f31"
+      blue: "#2889ea"
       white: "#fefeff"
       greyxl: "#f9f8fb"
       greyl: "#dedbe2"
       grey: "#9c97a7"
       greyd: "#6a696f"
+      greyxd: "#4d4c51"
       lilacd: "#a992de"
       lilac: "#c4b4ea"
       lilacl: "#e6dff7"
+      limexl: "#c4f493"
+      limel: "#a6ef5e"
+      lime: "#89ea28"
+      limed: "#6cc413"
+      limexd: "#4e8e0e"
+      orangexl: "#f4c493"
+      orangel: "#efa65e"
+      orange: "#ea8928"
+      oranged: "#d67515"
+      orangexd: "#b26211"
+      purplexl: "#c493f4"
+      purplel: "#a65eef"
+      purple: "#8928ea"
+      purpled: "#6c13c4"
+      purplexd: "#5810a0"
       transparent: "transparent"
+      redxl: "#f3a6a6"
+      redl: "#ec7272"
+      red: "#e53e3e"
+      redd: "#cd1c1c"
+      redxd: "#991515"
       hotpinkxl: "#f3d7e8"
       hotpinkl: "#e872ae"
       hotpink: "#ea2889"
+      hotpinkd: "#d61575"
+      hotpinkxd: "##b21162"
+      yellowxl: "#f8f8b7"
+      yellowl: "#f1f16f"
+      yellow: "#eaea28"
+      yellowd: "#d6d615"
+      yellowxd: "#b2b211"
 
     border-style:
       solid: solid
