Add green to colors

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -6,6 +6,11 @@ preons:
       black: "#302f31"
       blue: "#2889ea"
       white: "#fefeff"
+      greenxl: "#00ce00"
+      greenl: "#00a700"
+      green: "#008000"
+      greend: "#006c00"
+      greenxd: "#005900"
       greyxl: "#f9f8fb"
       greyl: "#dedbe2"
       grey: "#9c97a7"
