--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "husky": "^4.2.5"
   },
   "dependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-angular": "^8.3.4",
     "command-line-args": "^5.1.1",
     "commander": "^5.1.0",
     "cssom": "^0.4.4",
@@ -54,7 +56,8 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "yarn test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "engines": {
