--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,6 +29,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "FabioRosado",
+      "name": "Fábio Rosado",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/3131401?v=4",
+      "profile": "https://fabiorosado.dev/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
